trunk/Archive2/04/40290cf4033f60/output
main.cpp: In function 'int main()':
main.cpp:26:1: error: expected '}' at end of input
 }
 ^
